# jigsaw

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  example.jig  readme.txt  version.txt
src/: CMakeLists.txt  geo_load.hpp  hfn_init.hpp  hfn_load.hpp  hfn_save.inc  ini_load.hpp  init_jig_t.hpp  init_msh_t.hpp  jig_load.hpp  jig_read.hpp  jigsaw.cpp  jigsaw.hpp  marche.cpp  marche.hpp  msh_copy.hpp  msh_cull.hpp  msh_init.hpp  msh_load.hpp  msh_read.hpp  msh_save.hpp  msh_save.inc  offset.hpp  rdt_save.inc  run_iter.hpp  run_mesh.hpp  run_tria.hpp  tri_save.inc  tripod.hpp  txt_file.hpp
src/libcpp/: aabbtree.hpp  algorithms.hpp  allocators.hpp  basebase.hpp  containers.hpp  geometry.hpp  geommesh.hpp  geompred.hpp  geomreps.hpp  geomtype.hpp  hashfunc.hpp  interpolate.hpp  itermesh.hpp  libbasic.hpp  libparse.hpp  mathutil.hpp  meshfunc.hpp  meshreps.hpp  meshtype.hpp  mpfloats.hpp  rdelmesh.hpp  tessellate.hpp  textutil.hpp  treemesh.hpp  useropts.hpp
src/libcpp/aabb_tree/: aabb_mesh_k.hpp  aabb_pred_k.hpp  aabb_tree_k.hpp  aabb_type_k.hpp
src/libcpp/algorithms/: find.hpp  sort.hpp
src/libcpp/allocators/: alloc_base.hpp  alloc_item.hpp  alloc_pool.hpp  alloc_wrap.hpp
src/libcpp/containers/: array.hpp  array_iter.hpp  arraylist.hpp  basic_stack.hpp  block_array.hpp  block_iter.hpp  double_list.hpp  doubleiter.hpp  fixed_array.hpp  hashtable.hpp  hashtwice.hpp  iter_base.hpp  priorityidx.hpp  prioritymap.hpp  priorityset.hpp  single_list.hpp  singleiter.hpp
src/libcpp/expansion/: dd_float.hpp  ia_float.hpp  mp_basic.hpp  mp_float.hpp  mp_utils.hpp
src/libcpp/geom_base/: cell_ball_k.hpp  cell_base_k.hpp  geom_pred_k.hpp  intersect.hpp  intersect_k.hpp  matrix_util.hpp  predicate_k.hpp  tria_ball_k.hpp  tria_elem_k.hpp  vect_base_k.hpp
src/libcpp/geom_mesh/: aabb_mesh_k.hpp  aabb_pred_k.hpp  aabb_tree_k.hpp  aabb_type_k.hpp  del_tri_euclidean_2.hpp  del_tri_euclidean_3.hpp  delaunay_star_void.inc  delaunay_tri_k.hpp  delaunay_tri_type_2.hpp  delaunay_tri_type_3.hpp  delaunay_walk_node.inc  delaunay_walk_tria.inc  geom_mesh_ellipsoid_3.hpp  geom_mesh_euclidean_2.hpp  geom_mesh_euclidean_3.hpp  hfun_base_k.hpp  hfun_grid_ellipsoid_3.hpp  hfun_grid_euclidean_2.hpp  hfun_grid_euclidean_3.hpp  hfun_mesh_euclidean_2.hpp  hfun_mesh_euclidean_3.hpp  iter_divs_2.inc  iter_dual_2.inc  iter_flip_2.inc  iter_mesh_2.hpp  iter_mesh_euclidean_2.hpp  iter_mesh_euclidean_3.hpp  iter_node_2.inc  iter_params.hpp  iter_pred_ellipsoid_3.hpp  iter_pred_euclidean_2.hpp  iter_zips_2.inc  rdel_base_2.hpp  rdel_base_3.hpp  rdel_complex_2.hpp  rdel_complex_3.hpp  rdel_cost_delaunay_2.inc  rdel_cost_delaunay_3.inc  rdel_cost_delfront_2.inc  rdel_cost_delfront_3.inc  (+25 more)
src/libcpp/geom_reps/: geom_base_2.hpp  geom_base_3.hpp  geom_mesh_ellipsoid_3.hpp  geom_mesh_euclidean_2.hpp  geom_mesh_euclidean_3.hpp
src/libcpp/geom_type/: geom_base_2.hpp  geom_base_3.hpp  geom_mesh_ellipsoid_3.hpp  geom_mesh_euclidean_2.hpp  geom_mesh_euclidean_3.hpp
src/libcpp/graph_ops/: match_graph.hpp  match_hyper.hpp
src/libcpp/hj_solver/: hj_solver_2.hpp
src/libcpp/interpolate/: hfun_base_k.hpp  hfun_clip_k.hpp  hfun_constant_value_k.hpp  hfun_grid_ellipsoid_3.hpp  hfun_grid_euclidean_2.hpp  hfun_grid_euclidean_3.hpp  hfun_mesh_ellipsoid_3.hpp  hfun_mesh_euclidean_2.hpp  hfun_mesh_euclidean_3.hpp
src/libcpp/iter_mesh/: _bfs_mesh_2.inc  _zip_mesh_2.inc  cost_mesh_2.inc  flip_mesh_2.inc  iter_divs_2.inc  iter_divs_3.inc  iter_dual_2.inc  iter_dual_3.inc  iter_flip_2.inc  iter_flip_3.inc  iter_mesh_2.hpp  iter_mesh_3.hpp  iter_mesh_euclidean_2.hpp  iter_mesh_euclidean_3.hpp  iter_node_1.inc  iter_node_2.inc  iter_node_3.inc  iter_params.hpp  iter_pred_ellipsoid_3.hpp  iter_pred_euclidean_2.hpp  iter_pred_euclidean_3.hpp  iter_timers.hpp  iter_zips_2.inc  iter_zips_3.inc  move_mesh_2.inc  part_mesh_2.inc  sort_mesh_2.inc  tria_cavity_optimal_2.hpp
src/libcpp/mesh_func/: hfun_base_k.hpp  hfun_clip_k.hpp  hfun_constant_value_k.hpp  hfun_grid_ellipsoid_3.hpp  hfun_grid_euclidean_2.hpp  hfun_grid_euclidean_3.hpp  hfun_mesh_ellipsoid_3.hpp  hfun_mesh_euclidean_2.hpp  hfun_mesh_euclidean_3.hpp
src/libcpp/mesh_reps/: base_complex_k.hpp  hash_complex_k.hpp  mesh_complex_1.hpp  mesh_complex_2.hpp  mesh_complex_3.hpp  mesh_complex_type_k.hpp  tria_complex_1.hpp  tria_complex_2.hpp  tria_complex_3.hpp
src/libcpp/mesh_type/: base_complex_k.hpp  hash_complex_k.hpp  mesh_alchemy_1.hpp  mesh_alchemy_2.hpp  mesh_alchemy_3.hpp  mesh_complex_1.hpp  mesh_complex_2.hpp  mesh_complex_3.hpp  mesh_complex_type_k.hpp  tria_complex_1.hpp  tria_complex_2.hpp  tria_complex_3.hpp  tria_complex_type_k.hpp
src/libcpp/mp_floats/: dd_flt.hpp  dd_imp.hpp  mp_imp.hpp
src/libcpp/parameters/: iter_params.hpp  mesh_params.hpp
src/libcpp/predicate/: bisect_k.hpp  inball_k.hpp  orient_k.hpp  predicate_k.hpp
src/libcpp/rdel_mesh/: rdel_base_2.hpp  rdel_base_3.hpp  rdel_complex_2.hpp  rdel_complex_3.hpp  rdel_cost_delaunay_2.inc  rdel_cost_delaunay_3.inc  rdel_cost_delfront_2.inc  rdel_cost_delfront_3.inc  rdel_create_init_2.inc  rdel_create_init_3.inc  rdel_filt_k.hpp  rdel_make_2.hpp  rdel_make_3.hpp  rdel_mesh_2.hpp  rdel_mesh_3.hpp  rdel_offh_delfront_2.inc  rdel_offh_delfront_3.inc  rdel_params.hpp  rdel_pred_delaunay_2.hpp  rdel_pred_delaunay_3.hpp  rdel_pred_delfront_2.hpp  rdel_pred_delfront_3.hpp  rdel_refine_ball_2.inc  rdel_refine_ball_3.inc  rdel_refine_base_2.inc  rdel_refine_base_3.inc  rdel_refine_face_2.inc  (+15 more)
src/liblib/: init_jig_t.hpp  init_msh_t.hpp  load_jig_t.hpp  load_msh_t.hpp  save_jig_t.hpp  save_msh_t.hpp
src/netcdf/: ncutil.h
uni/: CMakeLists.txt  README.md  print.h  test2d_a.c  test2d_b.c  test2d_c.c  test2d_d.c  test2d_e.c  test2d_f.c  test2d_g.c  test2d_h.c  test2d_i.c  test2s_a.c  test2s_b.c  test2s_c.c  test2s_e.c  test2s_f.c  test2s_g.c  test2s_h.c  test2s_i.c  test3d_a.c  test3d_b.c  test3d_c.c  test3d_d.c  test3d_e.c  test3d_f.c  test3d_g.c  test3d_h.c  test3d_i.c  test_1.c  test_2.c  test_3.c  test_4.c  test_5.c  test_6.c  test_7.c  test_8.c  test_9.c  test_all.c
(+38 files in other folders)
