add_executable (test_1 test_1.c)
target_link_libraries (test_1 jigsaw)

add_executable (test_2 test_2.c)
target_link_libraries (test_2 jigsaw)

add_executable (test_3 test_3.c)
target_link_libraries (test_3 jigsaw)

add_executable (test_4 test_4.c)
target_link_libraries (test_4 jigsaw)

add_executable (test_5 test_5.c)
target_link_libraries (test_5 jigsaw)


